@@ -542,7 +542,7 @@ public class MuninnPageCache implements PageCache {
         // We can go as low as 30 (absolute number), as long as it does not exceed 50% of total pages
         int lowerBound = Math.min(maxPages / 2, 30);
         // We also want to have at most 100_000 free pages to avoid having page cache space wasted in PC is way too big
-        return Math.max(lowerBound, Math.min(freePages, 100_000));
+        return Math.clamp(freePages, lowerBound, 100_000);
     }
 
     private static void verifyHacks() {
